# data_extractor

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHECKLIST.md  CONFIG_YAML_MIGRATION_CHECKLIST.md  DATABRICKS_IMPLEMENTATION.md  Dockerfile  ENHANCED_STATE_MANAGEMENT_SUMMARY.md  IDEMPOTENT_PIPELINE_CHECKLIST.md  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  docker-compose.yml  example_enhanced_state_management.py  pyproject.toml  requirements.txt  setup.py  test_enhanced_state_management.py  verify_idempotency.py
.github/: copilot-instructions.md
.github/workflows/: bandit.yml  ci.yml
config/: config.yml  idempotent_pipeline.yml  minio_config.yml  sqlserver_config.yml  sqlserver_tables.json  tables.json
data_extractor/: __init__.py  cli.py  config.py  core.py  databricks.py  databricks_job.py  health.py  idempotent_pipeline.py  logging_config.py  settings.py  sqlserver.py  state_manager.py  stateful_core.py  stateful_databricks.py
docs/: CHECKLIST.md  CLASS_OVERVIEW.md  CONFIGURABLE_JDBC.md  CONTRIBUTING.md  DATABRICKS.md  DEMO.md  ENHANCED_STATE_MANAGEMENT.md  FLASHBACK.md  GETTING_STARTED.md  IDEMPOTENT_OPERATIONS.md  IDEMPOTENT_PIPELINE_DEMO.md  MINIO_SPARK_DOCKER.md  PERFORMANCE.md  ROADMAP_QUICK_REFERENCE.md  SQL_SERVER.md  UNITY_CATALOG.md
docs/development/: CLEANUP_CHECKLIST.md  CODE_CHANGE_CHECKLIST.md  DOC_UPDATE_CHECKLIST.md  TESTING.md  VALIDATION_SUMMARY.md
examples/: README.md  config.ini  config.yml  databricks_config.ini  databricks_config.yml  databricks_demo.py  databricks_job_demo.py  databricks_tables.json  databricks_usage_examples.py  demo.py  demo_config.ini  demo_config.yml  demo_tables.json  flashback_demo.py  idempotent_pipeline_demo.py  jdbc_config_demo.py  minio_spark_demo.py  sqlserver_demo.py  unity_catalog_demo.py  usage_examples.py
scripts/: init-oracle.sql  run_tests.sh  test_platform.py
tests/: test_core.py  test_core_new.py  test_databricks.py  test_databricks_job.py  test_flashback.py  test_idempotency.py  test_idempotent_pipeline.py  test_jdbc_options.py  test_spark_minio.py  test_sqlserver.py
